# ai-history-analyser

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  USAGE.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
ai_history_analyser/: __init__.py  __main__.py  cli.py  models.py
ai_history_analyser/analyzers/: __init__.py  base.py  unfinished_projects.py
ai_history_analyser/exporters/: __init__.py  base.py  json.py  obsidian.py
ai_history_analyser/parsers/: __init__.py  base.py  chatgpt.py  claude.py  gemini.py
