[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-history-analyser"
version = "0.1.0"
description = "Analyze chat histories from AI assistants to identify unfinished projects and prioritize them"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Craig Fletcher", email = "your.email@example.com"}
]
keywords = ["ai", "chatgpt", "claude", "gemini", "analysis", "obsidian", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]

dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "python-dateutil>=2.8.2",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
ai-history-analyser = "ai_history_analyser.cli:cli"

[project.urls]
Homepage = "https://github.com/WizzoUK2/ai-history-analyser"
Documentation = "https://github.com/WizzoUK2/ai-history-analyser#readme"
Repository = "https://github.com/WizzoUK2/ai-history-analyser"
Issues = "https://github.com/WizzoUK2/ai-history-analyser/issues"

[tool.setuptools]
packages = ["ai_history_analyser"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

